Fixed dark mode issue

--- a/src/App.css
+++ b/src/App.css
@@ -294,16 +294,17 @@ body{
   border-radius: 0px;
   margin: auto;
   min-height: 40vw;
+  box-shadow: 0px 0px 30px #b8b8b8;
 }
 
-@keyframes rotateportrait{
-  from{transform: rotate(0deg);}
-  to{transform: rotate(90deg);}
-}
 .card.art{
   background-image: url(./images/paper.jpg);
   border-radius: 0px;
-  padding: 5vw;
+  padding-top: 2vw;
+  padding-bottom: 2vw;
+
+  padding-left: 4vw;
+  padding-right: 4vw;
   height: 100%;
   width: 100%;
 }
@@ -321,7 +322,8 @@ body{
   width: 80%;
   height: 100%;
   border-radius: 12px;
-  padding: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   display: flex;
   flex-direction: row;
 }
@@ -329,13 +331,19 @@ body{
 #artwork-bar.light{
   background-color: #ededed;
 }
-
+#book-footer{
+  font-size: larger;
+  padding-top: 10px;
+  font-family: 'Amatic SC';
+  color: rgb(97, 97, 97);
+}
 .page-move{
+
   min-height: 32px;
   min-width: 32px;
   margin: auto;
-  margin-left: 5px;
-  margin-right: 5px;
+  margin-left: 3px;
+  margin-right: 3px;
   border-radius: 50%;
   border-width: 0px;
   outline: none;
@@ -345,7 +353,7 @@ body{
 }
 #page{
   background-image: url(./images/art/strathmore.jpg);
-  max-width: 45%;
+  max-width: 47%;
 }
 
 #next{
